--- a/scripts/kube/secrets.yaml
+++ b/scripts/kube/secrets.yaml
@@ -20,6 +20,7 @@ metadata:
   name: airflow-secrets
 type: Opaque
 data:
-  # The sql_alchemy_conn value is a base64 encoded representation of this connection string:
-  # postgresql+psycopg2://root:root@postgres-airflow:5432/airflow
-  sql_alchemy_conn: cG9zdGdyZXNxbCtwc3ljb3BnMjovL3Jvb3Q6cm9vdEBwb3N0Z3Jlcy1haXJmbG93OjU0MzIvYWlyZmxvdwo=
+  # The sql_alchemy_conn value is a base64 encoded representation of connection string. Needs to be replaced with env-specific postgre
+  # format like "postgresql+psycopg2://..."
+  sql_alchemy_conn: cG9zdGdyZXNxbCtwc3ljb3BnMjovL2FpcmZsb3dfdXNlcjphaXJmbG93X3Bhc3NAMTkyLjE2OC4xLjUxOjU0MzIvYWlyZmxvd19kYg==
+
