--- a/scripts/kube/templates/airflow.template.yaml
+++ b/scripts/kube/templates/airflow.template.yaml
@@ -22,12 +22,12 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: airflow
-  namespace: airflow-poc
+imagePullSecrets:
+- name: ghcr-service-account
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: airflow-poc
   name: airflow
 rules:
 - apiGroups: [""] # "" indicates the core API group
@@ -42,11 +42,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: airflow
-  namespace: airflow-poc
 subjects:
 - kind: ServiceAccount
   name: airflow # Name of the ServiceAccount
-  namespace: airflow-poc
 roleRef:
   kind: Role # This must be Role or ClusterRole
   name: airflow # This must match the name of the Role or ClusterRole you wish to bind to
@@ -56,7 +54,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: airflow
-  namespace: airflow-poc
 spec:
   replicas: 1
   selector:
@@ -88,8 +85,7 @@ spec:
           - "bash"
         args:
           - "-cx"
-          - "./tmp/airflow-test-env-init.sh"
-{{INIT_GIT_SYNC}}
+          - "./tmp/airflow-test-env-init.sh"{{INIT_GIT_SYNC}}
       containers:
       - name: webserver
         image: {{AIRFLOW_IMAGE}}:{{AIRFLOW_TAG}}
