--- a/scripts/kube/templates/configmaps.template.yaml
+++ b/scripts/kube/templates/configmaps.template.yaml
@@ -22,13 +22,16 @@ data:
   airflow.cfg: |
     [core]
     dags_folder = {{CONFIGMAP_DAGS_FOLDER}}
-    base_log_folder = /root/airflow/logs
-    logging_level = INFO
     executor = KubernetesExecutor
     parallelism = 32
     load_examples = False
     plugins_folder = /root/airflow/plugins
-    sql_alchemy_conn = $SQL_ALCHEMY_CONN
+    # UI to hide sensitive variable fields when set to True
+    hide_sensitive_var_conn_fields = True
+
+    [logging]
+    base_log_folder = /root/airflow/logs
+    logging_level = INFO
 
     [scheduler]
     dag_dir_list_interval = 300
@@ -37,7 +40,7 @@ data:
     # from the CLI or the UI), this defines the frequency at which they should
     # listen (in seconds).
     job_heartbeat_sec = 5
-    max_threads = 2
+    parsing_processes = 2
 
     # The scheduler constantly tries to trigger new tasks (look at the
     # scheduler section in the docs for more information). This defines
@@ -47,7 +50,6 @@ data:
     # after how much time a new DAGs should be picked up from the filesystem
     min_file_process_interval = 0
 
-    statsd_on = False
     statsd_host = localhost
     statsd_port = 8125
     statsd_prefix = airflow
@@ -101,7 +103,7 @@ data:
     worker_refresh_interval = 30
 
     # Secret key used to run your flask app
-    secret_key = temporary_key
+    secret_key = gR1b4aFVCPHXoOSsYCTx8Q==
 
     # Number of workers to run the Gunicorn web server
     workers = 4
@@ -119,7 +121,7 @@ data:
 
     # Default DAG view.  Valid values are:
     # tree, graph, duration, gantt, landing_times
-    dag_default_view = tree
+    dag_default_view = graph
 
     # Default DAG orientation. Valid values are:
     # LR (Left->Right), TB (Top->Bottom), RL (Right->Left), BT (Bottom->Top)
@@ -159,7 +161,6 @@ data:
     worker_container_tag = {{AIRFLOW_TAG}}
     worker_container_image_pull_policy = Always
     worker_service_account_name = airflow
-    namespace = airflow-poc
     delete_worker_pods = True
     dags_in_image = False
     git_repo = https://github.com/{{CONFIGMAP_GIT_REPO}}.git
@@ -254,9 +255,6 @@ data:
     # Example: flower_basic_auth = user1:password1,user2:password2
     flower_basic_auth =
 
-    # Default queue that tasks get assigned to and that worker listen on.
-    default_queue = default
-
     # How many processes CeleryExecutor uses to sync task state.
     # 0 means to use max(1, number of cores - 1) processes.
     sync_parallelism = 0
@@ -315,14 +313,98 @@ data:
     endpoint_url = http://0.0.0.0:8080
 
     [api]
-    auth_backend = airflow.api.auth.backend.default
+    auth_backends = airflow.api.auth.backend.default
 
     [github_enterprise]
     api_rev = v3
 
-    [admin]
-    # UI to hide sensitive variable fields when set to True
-    hide_sensitive_variable_fields = True
-
     [elasticsearch]
     elasticsearch_host =
+
+    [database]
+    # Number of times the code should be retried in case of DB Operational Errors.
+    # Not all transactions will be retried as it can cause undesired state.
+    # Currently it is only used in ``DagFileProcessor.process_file`` to retry ``dagbag.sync_to_db``.
+    # [VS]:moved as per DeprecationWarning from secion: [core]
+    max_db_retries = 3
+
+    # The SqlAlchemy connection string to the metadata database.
+    # SqlAlchemy supports many different database engines.
+    # More information here:
+    # http://airflow.apache.org/docs/apache-airflow/stable/howto/set-up-database.html#database-uri
+    # [VS]:moved as per DeprecationWarning from secion: [core]
+    #sql_alchemy_conn = sqlite:///{AIRFLOW_HOME}//airflow.db
+    sql_alchemy_conn = $SQL_ALCHEMY_CONN
+
+    # The encoding for the databases
+    # [VS]:moved as per DeprecationWarning from secion: [core]
+    sql_engine_encoding = utf-8
+
+    # If SqlAlchemy should pool database connections.
+    # [VS]:moved as per DeprecationWarning from secion: [core]
+    sql_alchemy_pool_enabled = True
+
+    # The schema to use for the metadata database.
+    # SqlAlchemy supports databases with the concept of multiple schemas.
+    # [VS]:moved as per DeprecationWarning from secion: [core]
+    sql_alchemy_schema =
+
+
+    # Collation for ``dag_id``, ``task_id``, ``key`` columns in case they have different encoding.
+    # By default this collation is the same as the database collation, however for ``mysql`` and ``mariadb``
+    # the default is ``utf8mb3_bin`` so that the index sizes of our index keys will not exceed
+    # the maximum size of allowed index when collation is set to ``utf8mb4`` variant
+    # (see https://github.com/apache/airflow/pull/17603#issuecomment-901121618).
+    # [VS]:moved as per DeprecationWarning from secion: [core]
+    # sql_engine_collation_for_ids =
+
+    # The SqlAlchemy pool size is the maximum number of database connections
+    # in the pool. 0 indicates no limit.
+    # [VS]:moved as per DeprecationWarning from secion: [core]
+    sql_alchemy_pool_size = 5
+
+    # The maximum overflow size of the pool.
+    # When the number of checked-out connections reaches the size set in pool_size,
+    # additional connections will be returned up to this limit.
+    # When those additional connections are returned to the pool, they are disconnected and discarded.
+    # It follows then that the total number of simultaneous connections the pool will allow
+    # is pool_size + max_overflow,
+    # and the total number of "sleeping" connections the pool will allow is pool_size.
+    # max_overflow can be set to ``-1`` to indicate no overflow limit;
+    # no limit will be placed on the total number of concurrent connections. Defaults to ``10``.
+    # [VS]:moved as per DeprecationWarning from secion: [core]
+    sql_alchemy_max_overflow = 10
+
+    # The SqlAlchemy pool recycle is the number of seconds a connection
+    # can be idle in the pool before it is invalidated. This config does
+    # not apply to sqlite. If the number of DB connections is ever exceeded,
+    # a lower config value will allow the system to recover faster.
+    # [VS]:moved as per DeprecationWarning from secion: [core]
+    sql_alchemy_pool_recycle = 1800
+
+    # Check connection at the start of each connection pool checkout.
+    # Typically, this is a simple statement like "SELECT 1".
+    # More information here:
+    # https://docs.sqlalchemy.org/en/13/core/pooling.html#disconnect-handling-pessimistic
+    # [VS]:moved as per DeprecationWarning from secion: [core]
+    sql_alchemy_pool_pre_ping = True
+
+    # Import path for connect args in SqlAlchemy. Defaults to an empty dict.
+    # This is useful when you want to configure db engine args that SqlAlchemy won't parse
+    # in connection string.
+    # See https://docs.sqlalchemy.org/en/13/core/engines.html#sqlalchemy.create_engine.params.connect_args
+    # [VS]:moved as per DeprecationWarning from secion: [core]
+    # sql_alchemy_connect_args =
+
+    # Whether to load the default connections that ship with Airflow. It's good to
+    # get started, but you probably want to set this to ``False`` in a production
+    # environment
+    # [VS]:moved as per DeprecationWarning from secion: [core]
+    load_default_connections = True
+
+    [operators]
+    # Default queue that tasks get assigned to and that worker listen on.
+    default_queue = default
+
+    [metrics]
+    statsd_on = False
